k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluedxp
  labels:
    name: bluedxp
    environment: production
