k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluedxp-service
  namespace: bluedxp
  labels:
    app: bluedxp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  selector:
    app: bluedxp
    component: app
